# autotools-skeleton

./: configure.ac
src/: Makefile.am  hello.c
